--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -43,11 +43,11 @@
   -->
   <system.web>
     <authentication mode="Forms">
-      <forms name="D3V!N M@J0R" loginUrl="~/Home/_LoginModal" defaultUrl="~/Home/Index" protection="All" timeout="1"/>
+      <forms name="D3V!N M@J0R" loginUrl="~/Home/_LoginModal" defaultUrl="~/Home/Index" protection="All" timeout="86399" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
-    <sessionState mode="InProc" timeout="2" />
+    <sessionState stateConnectionString="tcpip=localhost:42424" mode="StateServer" timeout="86400" />
   </system.web>
   <system.webServer>
     <!--<modules>
@@ -70,15 +70,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.OAuth" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin.Security.Cookies" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-3.1.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Antlr3.Runtime" publicKeyToken="eb42632606e9261f" culture="neutral" />
