--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -19,6 +19,7 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.2" targetFramework="net45" />
