--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -311,21 +311,31 @@
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\HomeImages\about-image.jpg" />
+    <Content Include="Content\HomeImages\amazon1.jpg" />
+    <Content Include="Content\HomeImages\amazon2.png" />
     <Content Include="Content\HomeImages\blog-detail-image.jpg" />
     <Content Include="Content\HomeImages\blog-header-bg.jpg" />
     <Content Include="Content\HomeImages\blog-image1.jpg" />
     <Content Include="Content\HomeImages\blog-image2.jpg" />
     <Content Include="Content\HomeImages\blog-image3.jpg" />
     <Content Include="Content\HomeImages\blog-image4.jpg" />
+    <Content Include="Content\HomeImages\facebook.png" />
+    <Content Include="Content\HomeImages\github.png" />
     <Content Include="Content\HomeImages\home-bg.jpg" />
     <Content Include="Content\HomeImages\home-bg2.jpg" />
     <Content Include="Content\HomeImages\home-bg3.jpg" />
     <Content Include="Content\HomeImages\home-bg4.jpg" />
     <Content Include="Content\HomeImages\home-bg5.jpg" />
+    <Content Include="Content\HomeImages\newegg.jpg" />
+    <Content Include="Content\HomeImages\outlook.jpg" />
+    <Content Include="Content\HomeImages\plex.jpg" />
+    <Content Include="Content\HomeImages\reddit.png" />
+    <Content Include="Content\HomeImages\slack.png" />
     <Content Include="Content\HomeImages\work-image1.jpg" />
     <Content Include="Content\HomeImages\work-image2.jpg" />
     <Content Include="Content\HomeImages\work-image3.jpg" />
     <Content Include="Content\HomeImages\work-image4.jpg" />
+    <Content Include="Content\HomeImages\youtube.png" />
     <Content Include="Content\Images\back1.png" />
     <Content Include="Content\Images\check.png" />
     <Content Include="Content\Images\check2.png" />
