--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -240,6 +240,11 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Constants\HardwareType1.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>HardwareType.tt</DependentUpon>
+    </Compile>
     <Compile Include="Constants\SkillTypeMaster.cs">
       <DependentUpon>SkillTypeMaster.tt</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -291,6 +296,10 @@
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Constants\HardwareType.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>HardwareType1.cs</LastGenOutput>
+    </Content>
     <Content Include="Constants\SkillTypeMaster.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>SkillTypeMaster.cs</LastGenOutput>
