--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -796,7 +796,6 @@
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-small.eot" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-mobile.woff" />
     <Content Include="Scripts\tinymce\langs\readme.md" />
-    <Content Include="Views\Shared\_LoginModal.cshtml" />
     <Content Include="Views\Home\_ContactEmailForm.cshtml" />
     <Content Include="Views\Home\_ManageLandingPage.cshtml" />
     <Content Include="Views\MediaDashboard\_DashboardCSS.cshtml" />
@@ -828,6 +827,7 @@
     <Content Include="Views\Portfolio\_AddNewTechSkill.cshtml" />
     <Content Include="Views\Portfolio\_AddNewLanguageSkill.cshtml" />
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
+    <Content Include="Views\Shared\_AdminLoginModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
