--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -828,6 +828,7 @@
     <Content Include="Views\Portfolio\_AddNewLanguageSkill.cshtml" />
     <Content Include="Views\Shared\_HomeLayout.cshtml" />
     <Content Include="Views\Shared\_AdminLoginModal.cshtml" />
+    <Content Include="Views\Shared\MyHomeLoginSignupModal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
