--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -43,7 +43,7 @@
   -->
   <system.web>
     <authentication mode="Forms">
-      <forms name="D3V!N M@J0R" loginUrl="~/Home/_LoginModal" defaultUrl="~/Home/Index" protection="All" timeout="86399" />
+      <forms name="D3V!N M@J0R" loginUrl="~/MyHome/Index" defaultUrl="~/MyHome/Index" protection="All" timeout="86399" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5" />
