login stuff should be done

--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -42,7 +42,7 @@
       </system.Web>
   -->
   <system.web>
-    <authentication mode="Forms">
+    <authentication mode="None">
       <forms name="D3V!N M@J0R" loginUrl="~/MyHome/Index" defaultUrl="~/MyHome/Index" protection="All" timeout="86399" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
