--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -326,6 +326,14 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\cover2.css" />
     <Content Include="Content\cover.css" />
+    <Content Include="Content\FineUploader\continue.gif" />
+    <Content Include="Content\FineUploader\edit.gif" />
+    <Content Include="Content\FineUploader\fine-uploader-new.css" />
+    <Content Include="Content\FineUploader\loading.gif" />
+    <Content Include="Content\FineUploader\pause.gif" />
+    <Content Include="Content\FineUploader\processing.gif" />
+    <Content Include="Content\FineUploader\retry.gif" />
+    <Content Include="Content\FineUploader\trash.gif" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
@@ -476,6 +484,7 @@
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
     <Content Include="Scripts\esm\popper.min.js" />
+    <Content Include="Scripts\fine-uploader.js" />
     <Content Include="Scripts\handlebars.amd.js" />
     <Content Include="Scripts\handlebars.amd.min.js" />
     <Content Include="Scripts\handlebars.js" />
@@ -788,6 +797,7 @@
     <Content Include="Views\Error\Error.cshtml" />
     <Content Include="Views\MyHome\BlogPost.cshtml" />
     <Content Include="Views\MyHome\Index.cshtml" />
+    <Content Include="Views\Shared\simple-thumbnails.html" />
     <Content Include="Views\Shared\_AdminFirstRunModal.cshtml" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce.woff" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce.ttf" />
@@ -810,6 +820,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\MyHome\_HomeSettingsForm.cshtml" />
+    <Content Include="Views\MyHome\_ImageUploader.cshtml" />
     <None Include="Views\Portfolio\Index.cshtml" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
