--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -46,10 +46,15 @@
       <forms name="D3V!N M@J0R" loginUrl="~/MyHome/Index" defaultUrl="~/MyHome/Index" protection="All" timeout="86399" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime maxRequestLength="2147483647" executionTimeout="1600" requestLengthDiskThreshold="2147483647" targetFramework="4.5" />
     <sessionState stateConnectionString="tcpip=localhost:42424" mode="StateServer" timeout="86400" />
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="2147483647" />
+      </requestFiltering>
+    </security>
     <!--<modules>
       <remove name="FormsAuthenticationModule" />
     </modules>-->
