--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -313,13 +313,7 @@
       <LastGenOutput>ApplicationMaster.cs</LastGenOutput>
     </Content>
     <Content Include="Content\bootsnack.css" />
-    <Content Include="Content\bootstrap-colorpicker\css\bootstrap-colorpicker.css" />
-    <Content Include="Content\bootstrap-colorpicker\css\bootstrap-colorpicker.min.css" />
-    <Content Include="Content\bootstrap-colorpicker\img\alpha-horizontal.png" />
-    <Content Include="Content\bootstrap-colorpicker\img\alpha.png" />
-    <Content Include="Content\bootstrap-colorpicker\img\hue-horizontal.png" />
-    <Content Include="Content\bootstrap-colorpicker\img\hue.png" />
-    <Content Include="Content\bootstrap-colorpicker\img\saturation.png" />
+    <Content Include="Content\bootstrap-colorpicker.css" />
     <Content Include="Content\bootstrap-iconpicker.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
@@ -482,7 +476,6 @@
     <Content Include="Scripts\angular.js" />
     <Content Include="Scripts\angular.min.js" />
     <Content Include="Scripts\bootstrap-colorpicker.js" />
-    <Content Include="Scripts\bootstrap-colorpicker.min.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.js" />
     <Content Include="Scripts\bootstrap-datetimepicker.min.js" />
     <Content Include="Scripts\bootstrap-iconpicker-iconset-all.min.js" />
