--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -862,6 +862,7 @@
     <Content Include="Views\Shared\MainContactEmail.cshtml" />
     <Content Include="Views\Shared\_BlogLayout.cshtml" />
     <Content Include="Views\Portfolio\_NewContactLink.cshtml" />
+    <Content Include="Views\Portfolio\_NewWorkSkill.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
