--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -55,6 +55,7 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="TinyMCE" version="4.7.10" targetFramework="net461" />
+  <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
