--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -48,6 +48,16 @@
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime maxRequestLength="2147483647" executionTimeout="1600" requestLengthDiskThreshold="2147483647" targetFramework="4.5" />
     <sessionState stateConnectionString="tcpip=localhost:42424" mode="StateServer" timeout="86400" />
+    <customErrors mode="On" defaultRedirect="~/Home/Error">
+      <error statusCode="500"
+             redirect="~/Home/Error" />
+      <error statusCode="404"
+             redirect="~/Home/Error" />
+      <error statusCode="403"
+             redirect="~/Home/Error" />
+      <error statusCode="469"
+             redirect="~/Home/Error" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <security>
@@ -55,6 +65,7 @@
         <requestLimits maxAllowedContentLength="2147483647" />
       </requestFiltering>
     </security>
+    <modules runAllManagedModulesForAllRequests="true"></modules>
     <!--<modules>
       <remove name="FormsAuthenticationModule" />
     </modules>-->
