--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -871,6 +871,7 @@
     <Content Include="Views\Portfolio\_NewContactLink.cshtml" />
     <Content Include="Views\Portfolio\_NewWorkSkill.cshtml" />
     <Content Include="Views\Shared\_Error.cshtml" />
+    <Content Include="Views\Shared\ConfirmationEmail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
