--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -5,9 +5,97 @@
   -->
 <configuration>
   <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
+  <log4net>
+    <root>
+      <level value="DEBUG" />
+      <appender-ref ref="ADONetAppender" />
+    </root>
+    <appender name="ADONetAppender" type="log4net.Appender.ADONetAppender">
+      <bufferSize value="100" />
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionString name="Log4Net" value="data source=.\SQLExpress;initial catalog=devinmajordotcom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
+      <commandText value="INSERT INTO [Security].[Log4NetLog] ([Date],[Thread],[Level],[Logger],[Message],[Exception], [UserId], [Action], [Controller], [Params]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception, @userid, @action,@controller, @params)" />
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%thread" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.ExceptionLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@userid" />
+        <dbType value="String" />
+        <size value="100" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%property{UserId}" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@action" />
+        <dbType value="String" />
+        <size value="100" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%property{Action}" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@controller" />
+        <dbType value="String" />
+        <size value="100" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%property{Controller}" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@params" />
+        <dbType value="String" />
+        <size value="50000" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%property{Params}" />
+        </layout>
+      </parameter>
+    </appender>
+  </log4net>
   <connectionStrings>
     <add name="MainDbConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
