--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -9,7 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLSERVER;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -65,10 +65,9 @@
         <requestLimits maxAllowedContentLength="2147483647" />
       </requestFiltering>
     </security>
-    <modules runAllManagedModulesForAllRequests="true"></modules>
-    <!--<modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthenticationModule" />
-    </modules>-->
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
