added new slider for language skills

--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -97,7 +97,7 @@
     </appender>
   </log4net>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLSERVER;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
@@ -137,14 +137,10 @@
     <httpRuntime maxRequestLength="2147483647" executionTimeout="1600" requestLengthDiskThreshold="2147483647" targetFramework="4.5" />
     <sessionState stateConnectionString="tcpip=localhost:42424" mode="StateServer" timeout="86400" />
     <customErrors mode="On" defaultRedirect="~/Home/Error">
-      <error statusCode="500"
-             redirect="~/Home/Error" />
-      <error statusCode="404"
-             redirect="~/Home/Error" />
-      <error statusCode="403"
-             redirect="~/Home/Error" />
-      <error statusCode="469"
-             redirect="~/Home/Error" />
+      <error statusCode="500" redirect="~/Home/Error" />
+      <error statusCode="404" redirect="~/Home/Error" />
+      <error statusCode="403" redirect="~/Home/Error" />
+      <error statusCode="469" redirect="~/Home/Error" />
     </customErrors>
   </system.web>
   <system.webServer>
