--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net461" />
   <package id="bootstrap.less" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
+  <package id="bootstrap-slider" version="5.0.13" targetFramework="net461" />
   <package id="easypiechart.jquery" version="2.1.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
