--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -15,20 +15,20 @@
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="LinqKit" version="1.1.15" targetFramework="net461" />
   <package id="log4net" version="2.0.8" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Cors" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc.Futures" version="5.0.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Client" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.2.5" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.9" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
@@ -43,7 +43,7 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Moment.js" version="2.22.0" targetFramework="net461" />
+  <package id="Moment.js" version="2.22.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net45" />
@@ -55,7 +55,8 @@
   <package id="popper.js" version="1.14.3" targetFramework="net461" />
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
-  <package id="TinyMCE" version="4.7.10" targetFramework="net461" />
+  <package id="selectize" version="0.12.1" targetFramework="net461" />
+  <package id="TinyMCE" version="4.7.12" targetFramework="net461" />
   <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
