--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -97,7 +97,7 @@
     </appender>
   </log4net>
   <connectionStrings>
-    <add name="MainDbConnection" connectionString="Data Source=.\DEVINSSQLExpress;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MainDbConnection" connectionString="Data Source=.\SQLExpress;Initial Catalog=devinmajordotcom;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="LandingConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=LandingPage;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <!--<add name="PortfolioConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=Portfolio;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="HomeConnection" connectionString="Data Source=.\DEVINSSQLEXPRESS;Initial Catalog=MyHome;Integrated Security=True" providerName="System.Data.SqlClient" />-->
