--- a/devinmajordotcom/packages.config
+++ b/devinmajordotcom/packages.config
@@ -6,6 +6,8 @@
   <package id="bootstrap.less" version="3.3.7" targetFramework="net461" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.17.45" targetFramework="net461" />
   <package id="bootstrap-slider" version="5.0.13" targetFramework="net461" />
+  <package id="Chart.js" version="2.7.2" targetFramework="net461" />
+  <package id="Chart.Mvc" version="1.0.0.2" targetFramework="net461" />
   <package id="easypiechart.jquery" version="2.1.6" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net45" />
@@ -47,8 +49,8 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Ninject" version="3.3.4" targetFramework="net45" />
   <package id="Ninject.MVC5" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.Web.Common" version="3.3.0" targetFramework="net45" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net461" />
+  <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net461" />
   <package id="Node.js" version="5.3.0" targetFramework="net45" />
   <package id="OpenHardwareMonitor" version="0.7.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
@@ -56,7 +58,7 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="selectize" version="0.12.1" targetFramework="net461" />
-  <package id="TinyMCE" version="4.7.12" targetFramework="net461" />
+  <package id="TinyMCE" version="4.7.13" targetFramework="net461" />
   <package id="Twitter.Typeahead" version="0.11.1" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
