--- a/devinmajordotcom/Devinmajordotcom.csproj
+++ b/devinmajordotcom/Devinmajordotcom.csproj
@@ -276,6 +276,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MainDbContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="PerformanceHistoryHub.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseDataService.cs" />
     <Compile Include="Services\HardwareMonitorService.cs" />
