feature is done

--- a/devinmajordotcom/Web.config
+++ b/devinmajordotcom/Web.config
@@ -17,7 +17,7 @@
     <appender name="ADONetAppender" type="log4net.Appender.ADONetAppender">
       <bufferSize value="100" />
       <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-      <connectionString name="Log4Net" value="data source=.\SQLExpress;initial catalog=devinmajordotcom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
+      <connectionString name="Log4Net" value="data source=.\DEVINSSQLExpress;initial catalog=devinmajordotcom;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" />
       <commandText value="INSERT INTO [Security].[Log4NetLog] ([Date],[Thread],[Level],[Logger],[Message],[Exception], [UserId], [Action], [Controller], [Params]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception, @userid, @action,@controller, @params)" />
       <parameter>
         <parameterName value="@log_date" />
